--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <h1 class="title">Tic-Toc-Toe <span>Game</span></h1>
       </header>
       <div class="cells">
-        <div data-cell-index="0" class="cell"><img src="./assets/img/circle.png" alt="" /></div>
-        <div data-cell-index="1" class="cell">1</div>
-        <div data-cell-index="2" class="cell">2</div>
-        <div data-cell-index="3" class="cell">3</div>
-        <div data-cell-index="4" class="cell"><img src="./assets/img/cross.png" alt="" /></div>
-        <div data-cell-index="5" class="cell">5</div>
-        <div data-cell-index="6" class="cell">6</div>
-        <div data-cell-index="7" class="cell">7</div>
-        <div data-cell-index="8" class="cell">8</div>
+        <div data-cell-index="0" class="cell"></div>
+        <div data-cell-index="1" class="cell"></div>
+        <div data-cell-index="2" class="cell"></div>
+        <div data-cell-index="3" class="cell"></div>
+        <div data-cell-index="4" class="cell"></div>
+        <div data-cell-index="5" class="cell"></div>
+        <div data-cell-index="6" class="cell"></div>
+        <div data-cell-index="7" class="cell"></div>
+        <div data-cell-index="8" class="cell"></div>
       </div>
-      <h2 class="users-turn">it's sia's turn</h2>
+      <h2 class="gameStatus">it's x's turn</h2>
       <button class="reset">Reset</button>
     </main>
     <script src="script.js"></script>
